[tool.poetry]
name = "guardian"
version = "0.2.0"
description = "Monitor the status of a set of services."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

readme = "README.md"
homepage = "https://sr.ht/~cedric/guardian"
repository = "https://git.sr.ht/~cedric/guardian"

keywords = ["monitoring", "system", "notification", "report"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

include = [
    "README.md",
    "COPYING",
    "reports"
]

[tool.poetry.urls]
"Bug Tracker" = "https://todo.sr.ht/~cedric/guardian"

[tool.poetry.scripts]
guardian = "guardian.main:run"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
