[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "guardian"
version = "0.2.3"
description = "Monitor the status of a set of services."
authors = [
    {name = "Cédric Bonhomme", email = "cedric@cedricbonhomme.org"}
]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["monitoring", "system", "notification", "report"]

dynamic = ["classifiers"]

requires-python = ">=3.10,<4.0"
dependencies = [
    "PyYAML (>=6.0.2)",
    "jinja2 (>=3.1.5)",
]

[project.urls]
Homepage = "https://github.com/cedricbonhomme/guardian"
Repository = "https://github.com/cedricbonhomme/guardian"
Changelog = "https://github.com/cedricbonhomme/guardian/blob/master/CHANGELOG.md"


[project.scripts]
guardian = "guardian.main:run"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
include = [
    "README.md",
    "COPYING",
    "reports",
    "guardian/templates/email.txt",
    "guardian/templates/report.html"
]


[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"

[tool.isort]
profile = "black"
